criação/estilização pag nossos produtos

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -27,51 +27,45 @@
               Solução segura, moderna e prática para quem entrega.
               <br />Autonomia e agilidade para quem recebe.
             </h2>
-            </div>
-            <div id="home_info">
+          </div>
+          <div id="home_info">
+            <div id="home_habilidades_central">
               <div class="home_habilidades">
-                <p>
-                  Privacidade e comodidade<br />Conveniência de horários<br />
-                  Reduz risco de extravios<br />Agilidade e segurança<br />
-                  Entrega sem contato<br />Evita filas
-                </p>
-              </div>
-              <div class="home_img">
-                <figure>
-                  <img
-                    src="../../assets/locker-home.jpg"
-                    alt="Figura de exemplo de locker"
-                  />
-                </figure>
+                <p>Privacidade e comodidade</p>
+                <p>Conveniência de horários</p>
+                <p>Reduz risco de extravios</p>
+                <p>Agilidade e segurança</p>
+                <p>Entrega sem contato</p>
+                <p>Evita filas</p>
               </div>
             </div>
-            <div id="home_icons">
-              <div class="home_img_pessoas">
-                <img src="../../assets/home-users.png" alt="Icone de pessoas" />
-                <p>
-                  Personalizar com <br />
-                  a sua marca
-                </p>
-              </div>
-              <div class="home_img_seta">
-                <img src="../../assets/home-seta.png" alt="Icone seta" />
-                <p>Escolher o tamanho</p>
-              </div>
-              <div class="home_img_monitorar">
+            <div class="home_img">
+              <figure>
                 <img
-                  src="../../assets/home-monitorar.png"
-                  alt="Icone monitor"
+                  src="../../assets/locker-home.jpg"
+                  alt="Figura de exemplo de locker"
                 />
-                <p>
-                  Controlar e monitorar <br />
-                  através da plataforma
-                </p>
-              </div>
+              </figure>
             </div>
-             <div id="home_rodape">
-              <div class="home_cadastro_button">
-                <button>Cadastre-se</button>
-              </div>
+          </div>
+          <div id="home_icons">
+            <div class="home_img_pessoas">
+              <img src="../../assets/home-users.png" alt="Icone de pessoas" />
+              <p>Personalizar com a sua marca</p>
+            </div>
+            <div class="home_img_seta">
+              <img src="../../assets/home-seta.png" alt="Icone seta" />
+              <p>Escolher o tamanho</p>
+            </div>
+            <div class="home_img_monitorar">
+              <img src="../../assets/home-monitorar.png" alt="Icone monitor" />
+              <p>Controlar e monitorar através da plataforma</p>
+            </div>
+          </div>
+          <div id="home_rodape">
+            <div class="home_cadastro_button">
+              <button>Cadastre-se</button>
+            </div>
           </div>
         </div>
       </main>
