cabeçalho editar produto

--- a/src/pages/dashboard-admin/editar-produtos.html
+++ b/src/pages/dashboard-admin/editar-produtos.html
@@ -22,6 +22,9 @@
             <a id="login_btn" href="../login/login.html">Login</a>
         </header>
         <main id="content">
+            <div id="editar_produtos_cabecalho">
+                <div class="editar_produtos_cabecalho_h3"><h3>Editar produto</h3></div>
+            </div>
             <div class="formulario">
                 <div class="formulario_linha">
                     <div class="formulario_campo">
@@ -38,7 +41,7 @@
                 <div class="formulario_linha">
                     <div class="formulario_campo">
                         <label>Dimensões</label>
-                        <input class="" />
+                        <textarea class="inpt_descreva_pedido"> </textarea>
                     </div>
                 </div>
                 <div class="formulario_acoes">
