cabeçalho editar clientes

--- a/src/pages/dashboard-admin/editar-clientes.html
+++ b/src/pages/dashboard-admin/editar-clientes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Template - Smart Locker Solutions</title>
+    <title>Editar clientes</title>
     <link rel="stylesheet" href="../../styles/reset.css" />
     <link rel="stylesheet" href="../../styles/global.css" />
     <link rel="stylesheet" href="../../styles/dashboard-editar.css">
@@ -22,6 +22,9 @@
             <a id="login_btn" href="../login/login.html">Login</a>
         </header>
         <main id="content">
+            <div id="editar_clientes_cabecalho">
+                <div class="editar_clientes_cabecalho_h3"><h3>Editar cliente</h3></div>
+            </div>
             <div class="formulario">
                 <div class="formulario_linha">
                     <div class="formulario_campo">
