Updata table clientes

--- a/src/pages/dashboard-admin/clientes.html
+++ b/src/pages/dashboard-admin/clientes.html
@@ -36,8 +36,9 @@
                             <th>Cliente</th>
                             <th>CNPJ</th>
                             <th>Endereço</th>
-                            <th>E-Mail</th>
+                            <th>E-mail</th>
                             <th>Telefone</th>
+                            <th>-</th>
                         </tr>
                     </thead>
                     <tbody>
