img home e centralização nossos produtos

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -30,6 +30,14 @@
           </div>
           <div id="home_info">
             <div id="home_habilidades_central">
+              <div class="home_img">
+                <figure>
+                  <img
+                    src="../../assets/Capa.png"
+                    alt="Ilustração de boneco com caixas"
+                  />
+                </figure>
+              </div>
               <div class="home_habilidades">
                 <p>Privacidade e comodidade</p>
                 <p>Conveniência de horários</p>
@@ -38,14 +46,6 @@
                 <p>Entrega sem contato</p>
                 <p>Evita filas</p>
               </div>
-            </div>
-            <div class="home_img">
-              <figure>
-                <img
-                  src="../../assets/locker-home.jpg"
-                  alt="Figura de exemplo de locker"
-                />
-              </figure>
             </div>
           </div>
           <div id="home_icons">
@@ -63,6 +63,12 @@
             </div>
           </div>
           <div id="home_rodape">
+            <div class="home_text_parceiros">
+                <h3>Nossos clientes</h3>
+            </div>
+            <div class="home_img_parceiros">
+              <img src="../../assets/home-marcas.png" alt="icones parceiros"/>
+            </div>
             <div class="home_cadastro_button">
               <button>Cadastre-se</button>
             </div>
