--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -23,7 +23,7 @@
       <main id="content">
         <div id="main_nossos_produtos">
             <div id="nossos_produtos_cabeçalho">
-                <h2>Possuímos lockers com tamanho pré-definido</h2>
+                <h2>Possuímos lockers com tamanhos padrões ou personalizados</h2>
             </div>
             <div id="nossos_produtos_img">
                 <figure>
@@ -57,7 +57,7 @@
             </div>
             <div id="nossos_produtos_rodape">
                 <div class="nossos_produtos_text">
-                    <h4>Trabalhamos também com modelos personalizados</h4>
+                    <h4>Tem interesse em personalizar seu locker? Entre em contato no link abaixo</h4>
                 </div>
                 <div class="nossos_produtos_button">
                     <button>Tenho interesse</button>
