--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -1,82 +1,85 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nossos produtos</title>
-    <link rel="stylesheet" href="../../styles/reset.css" />
-    <link rel="stylesheet" href="../../styles/global.css" />
-    <link rel="stylesheet" href="../../styles/produtos.css" />
-  </head>
 
-  <body>
-    <div id="container">
-      <header>
-        <div id="logo"><img src="../../assets/logo.png" alt="Logo" /></div>
-        <nav id="main_nav">
-          <a href="../index/index.html">Home</a>
-          <a href="../produtos/produtos.html">Nossos Produtos</a>
-          <a href="../sobre/sobre.html">Quem Somos</a>
-        </nav>
-        <a id="login_btn" href="../login/login.html">Login</a>
-      </header>
-      <main id="content">
-        <div id="main_nossos_produtos">
-            <div id="nossos_produtos_cabeçalho">
-                <h2>Possuímos lockers com tamanhos padrões ou personalizados</h2>
-            </div>
-            <div id="nossos_produtos_img">
-                <figure>
-                <img src="../../assets/locker-produtos.png" alt="icone exemplo locker">
-                </figure>
-            </div>
-            <div id="nossos_produtos_info">
-                <div class="nossos_produtos_G">
-                <h5>Tamanho G</h5>
-                <p>Tamanho do compartimento:</p>
-                <p>32 x 11 x 45 cm (LxAxP)</p>
-                <p>32 x 18 x 45 cm (LxAxP)</p>
-                <p>32 x 30 x 45 cm (LxAxP)</p>
-                <p>Dimensões Totais:</p>
-                <p>80 x 198 x 51 cm (LxAxP)</p>
-                </div>
-                <div class="nossos_produtos_M">
-                    <h5>Tamanho M</h5>
-                    <p>Tamanho do compartimento:</p>
-                    <p>32 x 32 x 45 cm (LxAxP)</p>
-                    <p>Dimensões Totais:</p>
-                    <p>80 x 198 x 51 cm (LxAxP)</p>
-                </div>
-                <div class="nossos_produtos_P">
-                    <h5>Tamanho P</h5>
-                    <p>Tamanho do compartimento:</p>
-                    <p> 32 x 56 x 45 cm (LxAxP)</p>
-                    <p>Dimensões Totais:</p>
-                    <p>80 x 198 x 51 cm (LxAxP)</p>
-                </div>
-            </div>
-            <div id="nossos_produtos_rodape">
-                <div class="nossos_produtos_text">
-                    <h4>Tem interesse em personalizar seu locker? Entre em contato no link abaixo</h4>
-                </div>
-                <div class="nossos_produtos_button">
-                    <button>Tenho interesse</button>
-                </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nossos produtos</title>
+  <link rel="stylesheet" href="../../styles/reset.css" />
+  <link rel="stylesheet" href="../../styles/global.css" />
+  <link rel="stylesheet" href="../../styles/produtos.css" />
+</head>
 
+<body>
+  <header>
+    <div id="logo"><img src="../../assets/logo1.png" alt="Logo" /></div>
+    <nav id="main_nav">
+      <a href="../index/index.html">Home</a>
+      <a href="../produtos/produtos.html">Nossos Produtos</a>
+      <a href="../sobre/sobre.html">Quem Somos</a>
+      <button class="btn_secundario">Login</button>
+      <select id="dropdown-menu">
+        <option value="sair">Nome</option>
+        <option value="admin">Editar perfil</option>
+        <option value="sair">Sair</option>
+      </select>
+    </nav>
+  </header>
 
+  <main id="content">
+    <h1 id="titulo">Possuímos lockers com tamanhos padrões ou personalizados</h1>
 
-
-            </div>
-
-
-
-
-
-
-
-        </div>
-      </main>
-      <footer>&copy caçadores de código 2023</footer>
+    <div id="locker_image">
+      <img src="../../assets/locker-produtos.png" alt="icone exemplo locker">
     </div>
-  </body>
+
+    <div id="card_container">
+      <div class="card">
+        <h5>Tamanho P</h5>
+        <div class="descricao">
+          <div>
+            <p>Tamanho do compartimento:</p>
+            <p>32 x 11 x 45 cm (LxAxP)</p>
+          </div>
+          <div>
+            <p>Dimensões Totais:</p>
+            <p>80 x 198 x 51 cm (LxAxP)</p>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <h5>Tamanho M</h5>
+        <div class="descricao">
+          <div>
+            <p>Tamanho do compartimento:</p>
+            <p>32 x 11 x 45 cm (LxAxP)</p>
+          </div>
+          <div>
+            <p>Dimensões Totais:</p>
+            <p>80 x 198 x 51 cm (LxAxP)</p>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <h5>Tamanho G</h5>
+        <div class="descricao">
+          <div>
+            <p>Tamanho do compartimento:</p>
+            <p>32 x 11 x 45 cm (LxAxP)</p>
+          </div>
+          <div>
+            <p>Dimensões Totais:</p>
+            <p>80 x 198 x 51 cm (LxAxP)</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <h2 id="subtitulo">Tem interesse em personalizar seu locker? Entre em contato no link abaixo</h4>
+      <button class="btn_primario">Tenho interesse</button>
+      </div>
+  </main>
+  <footer>&copy caçadores de código 2023</footer>
+
+</body>
+
 </html>
