--- a/src/pages/cadastro/editar-cadastro.html
+++ b/src/pages/cadastro/editar-cadastro.html
@@ -2,77 +2,80 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Editar cadastro</title>
-    <link rel="stylesheet" href="../../styles/reset.css" />
-    <link rel="stylesheet" href="../../styles/global.css" />
-    <link rel="stylesheet" href="../../styles/editar-cadastro.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Editar cadastro</title>
+  <link rel="stylesheet" href="../../styles/reset.css" />
+  <link rel="stylesheet" href="../../styles/global.css" />
+  <link rel="stylesheet" href="../../styles/editar-cadastro.css">
 </head>
 
 <body>
-    <div id="container">
-        <header>
-            <div id="logo"><img src="../../assets/logo.png" alt="Logo"></div>
-            <nav id="main_nav">
-                <a href="../index/index.html">Home</a>
-                <a href="../produtos/produtos.html">Nossos Produtos</a>
-                <a href="../sobre/sobre.html">Quem Somos</a>
-            </nav>
-            <select id="dropdown-menu">
-              <option value="sair">Nome</option>
-              <option value="admin">Editar perfil</option>
-              <option value="sair">Sair</option>
-          </select>
-        </header>
-        <main id="content">
-            <div id="cadastro_cabecalho">
-                <div class="cadastro_cabecalho_h3"><h3>Editar cadastro</h3></div>
-            </div>
-              <!-- formuario de cadastro  -->
-              <div class="formulario">
-                <div class="formulario_linha">
-                  <div class="formulario_campo">
-                    <label>Razão social</label>
-                    <input class="" />
-                  </div>
-                  <div class="formulario_campo">
-                    <label>Nome fantasia</label>
-                    <input class="" />
-                  </div>
-                </div>
-                <div class="formulario_linha">
-                  <div class="formulario_campo">
-                    <label>CNPJ</label>
-                    <input class="" />
-                  </div>
-                  <div class="formulario_campo">
-                    <label>Telefone</label>
-                    <input class="" />
-                  </div>
-                </div>
-                <div class="formulario_linha">
-                  <div class="formulario_campo">
-                    <label>E-mail</label>
-                    <input type="" class="" />
-                  </div>
-                </div>
-                <div class="formulario_linha">
-                  <div class="formulario_campo">
-                    <label>Senha</label>
-                    <input type="password" class="" />
-                  </div>
-                </div>
-                <div class="formulario_acoes">
-                  <button class="botao_secundario">Salvar</button>
-                  <button class="botao_terciario">Excluir conta</button>
-                  <button class="botao_quartenario">Cancelar plano</button>
-               
-                </div>
-              </div>
-        </main>
-        <footer>&copy caçadores de código 2023</footer>
+
+  <header>
+    <div id="logo"><img src="../../assets/logo1.png" alt="Logo" /></div>
+    <nav id="main_nav">
+      <a href="../index/index.html">Home</a>
+      <a href="../produtos/produtos.html">Nossos Produtos</a>
+      <a href="../sobre/sobre.html">Quem Somos</a>
+      <button class="btn_secundario">Login</button>
+      <select id="dropdown-menu">
+        <option value="sair">Nome</option>
+        <option value="admin">Editar perfil</option>
+        <option value="sair">Sair</option>
+      </select>
+    </nav>
+
+  </header>
+  <main id="content">
+    <div id="cadastro_cabecalho">
+      <div class="cadastro_cabecalho_h3">
+        <h3>Editar cadastro</h3>
+      </div>
     </div>
+    <!-- formuario de cadastro  -->
+    <form>
+      <div class="formulario_linha">
+        <div class="campo">
+          <label>Razão social</label>
+          <input class="" />
+        </div>
+        <div class="campo">
+          <label>Nome fantasia</label>
+          <input class="" />
+        </div>
+      </div>
+      <div class="formulario_linha">
+        <div class="campo">
+          <label>CNPJ</label>
+          <input class="" />
+        </div>
+        <div class="campo">
+          <label>Telefone</label>
+          <input class="" />
+        </div>
+      </div>
+      <div class="formulario_linha">
+        <div class="campo">
+          <label>E-mail</label>
+          <input type="" class="" />
+        </div>
+      </div>
+      <div class="formulario_linha">
+        <div class="campo">
+          <label>Senha</label>
+          <input type="password" class="" />
+        </div>
+      </div>
+      <div class="formulario_acoes">
+        <button class="btn_primario">Salvar</button>
+        <button class="btn_secundario warning">Excluir conta</button>
+        <button class="btn_secundario warning">Cancelar plano</button>
+
+      </div>
+    </form>
+  </main>
+  <footer>&copy caçadores de código 2023</footer>
 
 </body>
 
